--- a/TTT/TTT/TTT.csproj
+++ b/TTT/TTT/TTT.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{868B2379-457E-45DF-8C49-C0CDAA051F18}</ProjectGuid>
+    <ProjectGuid>{D4A2C129-AA81-4055-B9BC-B16DC5A0EE3E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Enigma</RootNamespace>
-    <AssemblyName>Enigma</AssemblyName>
+    <RootNamespace>TTT</RootNamespace>
+    <AssemblyName>TTT</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
