New three Classes. All was created  on .NET Framework 4.7.2 1.Class Library for mine code c#. To have reference with WPF 2.WPF 3.Unit Tests for Class Library have reference with one.

--- a/TTT/WPF_Project/WPF_Project_Interface.csproj
+++ b/TTT/WPF_Project/WPF_Project_Interface.csproj
@@ -93,5 +93,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Logic_CodeOfProgram\Logic_CodeOfProgram.csproj">
+      <Project>{944cf2c1-9c57-44ea-83cb-4e25fc2df97d}</Project>
+      <Name>Logic_CodeOfProgram</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
